Possibilité de créer un match

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <h1>Test</h1>
 
-<app-match-list></app-match-list>
+<nav>
+    <a routerLink="/add-match">Ajouter un match</a>
+    <a routerLink="/matches">Liste des matchs</a>
+</nav>
 
+<router-outlet></router-outlet>
