--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<app-auth></app-auth>
+<div class="bg-dark text-white">
+    <router-outlet></router-outlet>
+</div>
 
-<nav>
-    <a routerLink="/add-match">Ajouter un match</a>
-    <a routerLink="/matches">Liste des matchs</a>
-</nav>
-
-<router-outlet></router-outlet>
+<div class="bg-dark text-center p-2">
+    <nav class="mb-2">
+        <a routerLink="/add-match" class="text-light mx-2">Ajouter un match</a>
+        <a routerLink="/matches" class="text-light mx-2">Liste des matchs</a>
+    </nav>
+    <app-auth class="text-white"></app-auth>
+</div>
