--- a/src/app/match-list/match-list.component.html
+++ b/src/app/match-list/match-list.component.html
@@ -1,4 +1,3 @@
-
 <!-- match-list.component.html 
 <div *ngFor="let group of getUniqueGroups()">
   <h2>{{ group }}</h2>
@@ -11,10 +10,20 @@
 
 -->
 
-<div *ngFor="let group of getUniqueGroups()" class="mb-4">
-  <h3 class="bg-primary text-white p-3 mb-3 rounded">{{ group }}</h3>
+
+<ul  class="nav nav-tabs">
+  <li *ngFor="let phase of getUniquePhases()" class="nav-item">
+    <a class="nav-link" 
+    [ngClass]="{'active': phase === currentPhase, 'text-white': phase !== currentPhase}"
+    (click)="updateCurrentPhase(phase)" type="button">{{ phase }}</a>
+  </li>
+</ul>
+
+
+<div *ngFor="let group of getUniqueGroups(this.currentPhase)" class="mb-4 mt-2">
+  <h3 class="bg-custom-blue text-white p-3 mb-3 rounded">{{ group }}</h3>
   <ul class="list-group">
-    <li *ngFor="let match of getMatchesByGroup(group)" class="list-group-item mb-2 bg-dark-subtle">
+    <li *ngFor="let match of getMatchesByPhaseAndGroup(this.currentPhase, group)" class="list-group-item mb-2 bg-dark-subtle">
       <div class="d-flex justify-content-between align-items-center">
         <span class="fw-bold">{{ match.equipe1 }} vs {{ match.equipe2 }}</span>
         <span class="badge bg-secondary rounded-pill">{{ formatDate(match.date) }}</span>
@@ -23,4 +32,3 @@
     </li>
   </ul>
 </div>
-
