--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="bg-dark text-center p-2">
-    <nav class="mb-2">
+    <nav class="mb-2" *ngIf="this.showAddMatch">
         <a routerLink="/add-match" class="text-light mx-2">Ajouter un match</a>
         <a routerLink="/matches" class="text-light mx-2">Liste des matchs</a>
     </nav>
