--- a/src/app/match-list/match-list.component.html
+++ b/src/app/match-list/match-list.component.html
@@ -19,7 +19,6 @@
   </li>
 </ul>
 
-
 <div *ngFor="let group of getUniqueGroups(this.currentPhase)" class="mb-4 mt-2">
   <h3 class="bg-custom-blue text-white p-3 mb-3 rounded">{{ group }}</h3>
   <ul class="list-group">
@@ -27,6 +26,7 @@
       <div class="d-flex justify-content-between align-items-center">
         <span class="fw-bold">{{ match.equipe1 }} vs {{ match.equipe2 }}</span>
         <span class="badge bg-secondary rounded-pill">{{ formatDate(match.date) }}</span>
+        <button class="btn btn-danger" (click)="deleteMatch(match)" *ngIf="this.showDeleteButton">Supprimer</button>
       </div>
       <div class="text-muted small">{{ match.phase }} - Terrain {{ match.terrain }}</div>
     </li>
