Message expliquant le bouton de login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,6 @@
         <a routerLink="/add-match" class="text-light mx-2">Ajouter un match</a>
         <a routerLink="/matches" class="text-light mx-2">Liste des matchs</a>
     </nav>
+    <label>(Admin only)</label>
     <app-auth class="text-white"></app-auth>
 </div>
